Update and rename realidadvirtual.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ Ya que un usuario puedo volverse protagonista de un escenario sin salir de un en
 <img src="images.jpeg" width="500px" height="300px">
 <img src="123.jpeg" width="404px" height="330px">
 <img src="789.jpeg" width="350px" height="250px">
-<a href="file:///C:/Users/USERPC/Documents/20/21/realidadaumentada.html">Realidad Aumentada</a>
-<a href="file:///C:/Users/USERPC/Documents/20/20/Inteligencia%20Artificial.html">Inteligencia Artificial</a>
+<a href="">Realidad Aumentada</a>
+<a href="https://mishelle12345.github.io/inteligencia.github.io/">Inteligencia Artificial</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/eRR9-2RhjpY?si=3y45fsVpwQPmesU_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
